demos/ingress-routing/good/deployment-app1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-routing-app1
  labels:
    app: ingress-routing-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-routing-app1
  template:
    metadata:
      labels:
        app: ingress-routing-app1
    spec:
      volumes:
        - name: web-root
          emptyDir: {}
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web-root
              mountPath: /usr/share/nginx/html
