demos/ingress-routing/good/deployment-app2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-routing-app2
  labels:
    app: ingress-routing-app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-routing-app2
  template:
    metadata:
      labels:
        app: ingress-routing-app2
    spec:
      volumes:
        - name: web-root
          emptyDir: {}
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web-root
              mountPath: /usr/share/nginx/html
