demos/ingress-routing/good/service-app1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-routing-app1
spec:
  selector:
    app: ingress-routing-app1
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
