demos/ingress-routing/good/service-app2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-routing-app2
spec:
  selector:
    app: ingress-routing-app2
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
