demos/ingress-routing/good/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-routing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ingress-routing-good.k8s.orb.local
      secretName: demo-tls
  rules:
    - host: ingress-routing-good.k8s.orb.local
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: ingress-routing-app1
                port:
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: ingress-routing-app2
                port:
                  number: 80
